# taiwan-stock-prediction

./: .gitignore  main.py  model.py  pyproject.toml
airflow/: .env.example  airflow.Dockerfile  docker-compose.yaml  requirements.txt
airflow/config/: airflow.cfg
airflow/dags/: d_stock_src_to_dim.py
airflow/utils/: gcp.py
ml/: main.py  model.py  preprocessing.py  utils.py
notebooks/: EDA.ipynb
terraform/: .gitignore  main.tf  output.tf  variables.tf
